# fractals-gtk-rs

./: Cargo.toml  README.md  app.glade  app.glade~
src/: lib.rs  main.rs  shapes.rs
src/fractal/: circles.rs  circles_with_lines.rs  lines.rs  mod.rs  random_tree.rs  tree.rs
