[package]
name = "fractals"
version = "0.1.0"
authors = ["RustyStriker <avivr903@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
chrono = "0.4.19"
gio = "0.9.1"
glib = "0.10.3"
gdk = "0.13.2"
rand = "0.7.3"
cairo-rs = "0.9.1"
gdk-pixbuf = "0.9.0"